--- a/Documentation/Languages/frFR.xaml
+++ b/Documentation/Languages/frFR.xaml
@@ -2,7 +2,7 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:system="clr-namespace:System;assembly=mscorlib">
     <!--#region UI String-->
-    <system:String x:Key="mainTitle">WoW Spell Editor (3.3.5a - 12340)</system:String>
+    <system:String x:Key="mainTitle">WoW Spell Editor</system:String>
     <system:String x:Key="tabSelectSpell">Choisir un sort</system:String>
     <system:String x:Key="labSpellsLoaded">Aucun sort chargé.</system:String>
     <system:String x:Key="labGoToSpell">Aller au sort :</system:String>
@@ -189,7 +189,7 @@
     <system:String x:Key="Input_MySQL_Details_6">Entrez la table MySQL à créer / utiliser :</system:String>
     <system:String x:Key="Input_MySQL_Error">Une erreur est survenue lors de la configuration de la connexion à la base de données :</system:String>
     <system:String x:Key="Input_MySQL_Error_2">Les détails de MySQL ne sont pas valides.</system:String>
-    <system:String x:Key="Welcome" xml:space="preserve">Bienvenue dans l’éditeur de sorts WoW pour la version 3.3.5a (12340).&#x0a;&#x0a;Souhaitez-vous utiliser la version locale de l’éditeur (SQLite) ou vous connecter à un serveur (MySQL)?</system:String>
+    <system:String x:Key="Welcome" xml:space="preserve">Bienvenue dans l’éditeur de sorts WoW.&#x0a;&#x0a;Souhaitez-vous utiliser la version locale de l’éditeur (SQLite) ou vous connecter à un serveur (MySQL)?</system:String>
     <system:String x:Key="Exit" xml:space="preserve">Êtes-vous sûr de vouloir quitter?&#x0a;&#x0a;Assurez-vous d’avoir enregistré avant d’effectuer cette action, sinon tout votre progrès sera perdu !</system:String>
     <system:String x:Key="TruncateTable1">ÊTES-VOUS SÛR ?</system:String>
     <system:String x:Key="TruncateTable2" xml:space="preserve">Si vous tronquez la table, TOUTES les données des tables SQL seront supprimées.&#x0a;&#x0a;Cette fonctionnalité ne doit être utilisée que lorsque vous souhaitez réinitialiser les tables et importer de nouvelles DBC.</system:String>
